# ESP32S3_SLECG_CODE

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ESP32S3_SL_ECG 管脚分配表.numbers  README.md  sdkconfig.defaults
ble_protocol/: PACKET_FIELD_TABLE.md  README.md
ble_protocol/docs/: 01_architecture.md  02_throughput_analysis.md  03_frame_envelope.md  04_downlink_commands.md  05_uplink_data_streams.md
ble_protocol/packets/: battery_adc.md  device_status.md  ecg_data.md  imu_data.md
components/slecg_app/: CMakeLists.txt  slecg_app.c  slecg_app.h  slecg_button.c  slecg_button.h  slecg_ecg.c  slecg_ecg.h  slecg_events.h  slecg_fsm.c  slecg_fsm.h  slecg_led.c  slecg_led.h  slecg_nvs.c  slecg_nvs.h  slecg_proto_handler.c  slecg_proto_handler.h  slecg_state.h  slecg_status.c  slecg_status.h  slecg_transport.c  slecg_transport.h  slecg_uart_stream.c  slecg_uart_stream.h
host_app/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
host_app/slecg_host/: __init__.py  logging_config.py
host_app/slecg_host/ecg/: __init__.py  buffer.py  converter.py  processor.py  recorder.py
host_app/slecg_host/protocol/: __init__.py  constants.py  frame.py  payloads.py
host_app/slecg_host/transport/: __init__.py  base.py  ble_transport.py  serial_transport.py
host_app/slecg_host/ui/: __init__.py  connection_panel.py  control_panel.py  ecg_plot.py  main_window.py  status_panel.py  theme.py  transport_bridge.py
host_app/tests/: test_ecg_payload.py  test_ecg_processor.py  test_frame_parser.py  test_session_recording.py
main/: CMakeLists.txt  board_pins.h  main.c
(+14 files in other folders)
